<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        style="@style/ListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_going_header" />

    <TextView
        android:id="@+id/people_going"
        style="@style/PeopleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_not_going_header" />

    <TextView
        android:id="@+id/people_not_going"
        style="@style/PeopleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/ListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/going_question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:onClick="yesClicked"
            android:text="@string/yes" />

        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:onClick="noClicked"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>